src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Household_ASQ_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household ASQ-SE</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASQ-SE Assessments</relationshipLabel>
        <relationshipName>Assessments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household_Cheers_Check_IN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Cheers Check IN</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (Household Cheers Check IN)</relationshipLabel>
        <relationshipName>Assessments9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household_HFPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household HFPI</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HFPI Assessments</relationshipLabel>
        <relationshipName>Assessments6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household_Home_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Home Scale</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Home Scale Assessments</relationshipLabel>
        <relationshipName>Assessments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household_NCFAS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household NCFAS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NCFAS Assessments</relationshipLabel>
        <relationshipName>Assessments8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household_NEEDS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household NEEDS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NEEDS Assessments</relationshipLabel>
        <relationshipName>Assessments7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Housing_Stability__c</fullName>
        <label>Housing Stability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Hurt_Others__c</fullName>
        <label>Hurt Others</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Hurt_Self_On_Purpose__c</fullName>
        <label>Hurt Self On Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Initiates_Physical_Contact__c</fullName>
        <inlineHelpText>Initiates  Physical  Contact must be between 1-7</inlineHelpText>
        <label>Initiates  Physical  Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Initiative_and_Acceptance_of_support__c</fullName>
        <inlineHelpText>Parent(s)/Caregiver(s) Initiative and Acceptance of Available Help/Support</inlineHelpText>
        <label>Initiative and Acceptance of support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Interested_in_things__c</fullName>
        <label>Interested in things</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Involvement_PR__c</fullName>
        <label>Involvement-PR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Laugh_Smile__c</fullName>
        <label>Laugh / Smile</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Learning_Environment__c</fullName>
        <label>Learning Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Learning_PR__c</fullName>
        <label>Learning-PR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Let_You_Know__c</fullName>
        <label>Let You Know</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Like_Around_Children__c</fullName>
        <label>Like Around Children</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Like_Hear_Stories__c</fullName>
        <label>Like Hear Stories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Like_Hugged_Cuddled__c</fullName>
        <label>Like Hugged Cuddled</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Like_Picked_Up__c</fullName>
        <label>Like Picked Up</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Like_To_play__c</fullName>
        <label>Like To play</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Listening__c</fullName>
        <label>Listening</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Longer_30_To_Feed__c</fullName>
        <label>Longer 30 To Feed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Look_At_You__c</fullName>
        <label>Look At You</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Look_For_You__c</fullName>
        <label>Look For You</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MOB_Smoke__c</fullName>
        <label>MOB Smoke</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Medical_Problems__c</fullName>
        <label>Medical Problems</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_3__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_More_Active__c</fullName>
        <label>More Active</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_ASQ_SE__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Mutual_Support_Within_the_Family__c</fullName>
        <label>Mutual Support Within the Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>UK(unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NAQ14_Need_Medical_Service__c</fullName>
        <inlineHelpText>Q14. I am in need of medical services and/or family doctor and do not have medical insurance</inlineHelpText>
        <label>Q14. Need Medical Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_19b_Head_Lice__c</fullName>
        <label>19b. Head Lice Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_2a_Food__c</fullName>
        <label>Q2a. Food</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_2c__c</fullName>
        <label>Q2c. Medicaid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_3WIC__c</fullName>
        <label>Q3.  I  would  like  to  learn about WIC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_4Healthworker__c</fullName>
        <inlineHelpText>I  am  pregnant  &amp;  would  like  to  meet  with  a  health  worker</inlineHelpText>
        <label>Q4. Meet with Health worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_5_NeedRent__c</fullName>
        <inlineHelpText>Q5.  There’s  a  crisis  causing  loss  of  income  in  my  household  &amp;  I  need  help  with  rent  or  utilities</inlineHelpText>
        <label>Q5. NeedRent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_6_NeedShelter__c</fullName>
        <inlineHelpText>6.  I  am  homeless  or  about  to  be  homeless  and  need  emergency  shelter  and  housing  information</inlineHelpText>
        <label>Q6. NeedShelter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_7SubHousing__c</fullName>
        <inlineHelpText>7.  I  am  interested  in  applying  for  subsidized  housing</inlineHelpText>
        <label>Q7 SubHousing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_8School__c</fullName>
        <inlineHelpText>Q8. I am concerned about my child’s attendance or doing well in school</inlineHelpText>
        <label>Q8. School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_CCINumber__c</fullName>
        <displayFormat>CCI-{00}</displayFormat>
        <label>CCINumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BRI_NA_Household__c</fullName>
        <label>Q19k. Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q11_Disability__c</fullName>
        <inlineHelpText>Q11.  I  would  like  information  on  services  for  persons  with  developmental  disabilities</inlineHelpText>
        <label>Q11. Disability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q12_Hopeless__c</fullName>
        <inlineHelpText>12.  I  am  concerned  about  frequent  feelings  of  hopelessness  and/or  fear</inlineHelpText>
        <label>Q12. Hopeless and / or Fear</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q13_JobTraining__c</fullName>
        <inlineHelpText>Q13.  I  am  interested  in  obtaining  information  about  employment,  a  new  career  or  job  training</inlineHelpText>
        <label>Q13. JobTraining</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q15_CCAssist__c</fullName>
        <inlineHelpText>Q15.I am interested in applying for child care assistance</inlineHelpText>
        <label>Q15. Child Care Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q16_FamilySafety__c</fullName>
        <inlineHelpText>I am concerned for myself and my family’s safety</inlineHelpText>
        <label>Q16. Family Safety Concerns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q17_Transportation__c</fullName>
        <inlineHelpText>Q17. I am interested in obtaining information about transportation</inlineHelpText>
        <label>Q17. Transportation Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q18_Emergency_Food_Assistance__c</fullName>
        <inlineHelpText>Q18. I am in need of emergency food assistance</inlineHelpText>
        <label>Q18. Emergency Food Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19a_Immunization__c</fullName>
        <label>Q19a. Immunization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19c_Pregnancy_Test__c</fullName>
        <label>Q19c.Pregnancy Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19d_carseat__c</fullName>
        <label>Q19d. Infant or toddler car seat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19e_TB_Test__c</fullName>
        <label>Q19e. TB Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19f_Lead_Test__c</fullName>
        <label>Q19f. Lead Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19g_Family_Planning__c</fullName>
        <label>Q19g. Family Planning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19h_Adult_edu__c</fullName>
        <label>Q19h. Adult education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19i_Counseling__c</fullName>
        <label>Q19i. Counseling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q19j_Budgeting__c</fullName>
        <label>Q19j. Budgeting Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q1__c</fullName>
        <label>Q1. Involved  with  Community  Partners</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NA_Q20_Memo__c</fullName>
        <label>Q20. I would like more information about</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>